[package]
name = "jiangtokoto-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
notify = "6.1"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mime_guess = "2.0"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
fastrand = "2.0"
thiserror = "1.0"
moka = { version = "0.12", features = ["future"] }
tower = { version = "0.4", features = ["util"] }
tracing-appender = "0.2"
parking_lot = "0.12"
time = { version = "0.3", features = ["formatting"] }
sha2 = "0.10"
image = "0.24"
utoipa = { version = "4.2", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }
prometheus = "0.13"
lazy_static = "1.4"
clap = { version = "4", features = ["derive", "env"] }

# 性能优化配置
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1